Skip to content

rav1e: encoding fails immediately on assertion

The following script:

#!/bin/sh

set -e
set -u

SEQ=${SEQ:-/home/tmatth/Videos/akiyo_qcif.y4m}

/big-repos/vlc/vlc -vvvvvv \
        -I "dummy" ${SEQ} \
        --rawvid-chroma=I420 \
        --rawvid-fps=30 \
        --sout="#transcode{vcodec=av10,venc=rav1e}:std{access=file,mux=avformat,dst='test-video-rav1e.ivf'}" \
        vlc://quit

fails on:

VLC media player 4.0.0-dev Otto Chriek (revision 4.0.0-dev-22080-gb2f1424d3b)
[0000565456bf3b70] main libvlc debug: VLC media player - 4.0.0-dev Otto Chriek
[0000565456bf3b70] main libvlc debug: Copyright © 1996-2023 the VideoLAN team
[0000565456bf3b70] main libvlc debug: revision 4.0.0-dev-22080-gb2f1424d3b
[0000565456bf3b70] main libvlc debug: configured with ./configure  '--enable-debug'
[0000565456bf3b70] main libvlc debug: searching plug-in modules
[0000565456bf3b70] main libvlc debug: loading plugins cache file /big-repos/vlc/modules/plugins/plugins.dat
[0000565456bf3b70] main libvlc warning: cannot read /big-repos/vlc/modules/plugins/plugins.dat: No such file or directory
[0000565456bf3b70] main libvlc debug: recursively browsing `/big-repos/vlc/modules/plugins'
[0000565456bf3b70] main libvlc debug: loading plugins cache file /big-repos/vlc/modules/plugins.dat
[0000565456bf3b70] main libvlc debug: recursively browsing `/big-repos/vlc/modules'
[0000565456bf3b70] main libvlc debug: plug-ins loaded: 586 modules
[0000565456bf3b70] main libvlc debug: opening config file (/home/tmatth/.config/vlc/vlcrc)
[00007fffadaa2618] main generic debug: looking for logger module matching "any": 4 candidates
[00007fffadaa2618] main generic debug: using logger module "console"
[00007fffadaa25f8] main generic debug: looking for tracer module matching "none": 0 candidates
[00007fffadaa25f8] main generic debug: no tracer modules matched with name none
[0000565456bf3b70] main libvlc debug: translation test: code is "C"
[00007fffadaa25d8] main generic debug: looking for keystore module matching "memory": 1 candidates
[00007fffadaa25d8] main generic debug: using keystore module "memory"
[0000565456bf3b70] main libvlc debug: CPU has capabilities SSE2 SSE3 SSSE3 SSE4.1 AVX AVX2 FPU 
[00007fffadaa25e8] main generic debug: looking for medialibrary module matching "any": 0 candidates
[00007fffadaa25e8] main generic debug: no medialibrary modules matched with name any
[0000565456bf3b70] main libvlc warning: Media library initialization failed
[0000565456ca2d80] main player debug: creating audio output
[00007fffadaa2328] main generic debug: looking for audio output module matching "any": 4 candidates
[0000565456bf6790] vlcpulse audio output debug: using library version 16.1.0
[0000565456bf6790] vlcpulse audio output debug:  (compiled with version 16.1.0, protocol 35)
[0000565456bf6790] vlcpulse audio output debug: connected locally to /run/user/1000/pulse/native as client #3291
[0000565456bf6790] vlcpulse audio output debug: using protocol 35, server protocol 35
[0000565456bf6790] pulse audio output debug: adding sink 57: alsa_output.pci-0000_00_1f.3.analog-stereo (Built-in Audio Analog Stereo)
[0000565456bf6790] pulse audio output debug: adding sink 2334: alsa_output.usb-SteelSeries_SteelSeries_Arctis_7-00.mono-chat (SteelSeries Arctis 7 Chat)
[0000565456bf6790] pulse audio output debug: adding sink 2335: alsa_output.usb-SteelSeries_SteelSeries_Arctis_7-00.stereo-game (SteelSeries Arctis 7 Game)
[00007fffadaa2328] main generic debug: using audio output module "pulse"
[0000565456ca2d80] main player debug: keeping audio output
[00007fffadaa24d8] main generic debug: looking for interface module matching "dbus,none": 1 candidates
[0000565456c9e0a0] dbus interface debug: listening on dbus as: org.mpris.MediaPlayer2.vlc
[00007fffadaa24d8] main generic debug: using interface module "dbus"
[00007f1064000ba0] main input debug: Creating an input for preparsing 'akiyo_qcif.y4m'
[00007fffadaa26a8] main generic debug: looking for interface module matching "hotkeys": 1 candidates
[00007fffadaa26a8] main generic debug: using interface module "hotkeys"
[00007fffadaa26a8] main generic debug: looking for interface module matching "xcb_hotkeys": 1 candidates
[00007fffadaa26a8] main generic debug: using interface module "xcb_hotkeys"
[00007fffadaa26a8] main generic debug: looking for interface module matching "dummy": 1 candidates
[0000565456c8ae30] dummy interface: using the dummy interface module...
[00007fffadaa26a8] main generic debug: using interface module "dummy"
[0000565456c7f540] main input debug: Creating an input for 'akiyo_qcif.y4m'
[0000565456ca2d80] main player debug: creating stream output chain `transcode{vcodec=av10,venc=rav1e}:std{access=file,mux=avformat,dst='test-video-rav1e.ivf'}'
[00007f105c001000] main stream out debug: stream=`std'
[00007f10725de928] main generic debug: looking for sout output module matching "std": 2 candidates
[00007f105c001000] main stream out debug: set config option: sout-standard-access to file
[00007f105c001000] main stream out debug: set config option: sout-standard-mux to avformat
[00007f105c001000] main stream out debug: set config option: sout-standard-dst to test-video-rav1e.ivf
[00007f10725de6d8] main generic debug: looking for sout access module matching "file": 1 candidates
[00007f105c001eb0] file access out debug: file access output opened (test-video-rav1e.ivf)
[00007f10725de6d8] main generic debug: using sout access module "file"
[00007f10725de6c8] main generic debug: looking for sout mux module matching "avformat": 1 candidates
[00007f105c002b60] avformat mux debug: using ffmpeg Lavf59.27.100
[00007f105c002b60] avformat mux debug: CPU flags: 0x000fd3db
[00007f10725de6c8] main generic debug: using sout mux module "avformat"
[00007f105c001000] stream_out_standard stream out debug: using `file/avformat://test-video-rav1e.ivf'
[00007f10725de928] main generic debug: using sout output module "stream_out_standard"
[00007f105c075ab0] main stream out debug: stream=`transcode'
[00007f10725de928] main generic debug: looking for sout filter module matching "transcode": 1 candidates
[00007f105c075ab0] main stream out debug: set config option: sout-transcode-vcodec to av10
[00007f105c075ab0] main stream out debug: set config option: sout-transcode-venc to rav1e
[00007f105c075ab0] transcode stream out debug: Checking video codec mapping for av10 got av01 
[00007f105c075ab0] transcode stream out debug: codec video=av01 0x0 scaling: 0.000000 0kb/s
[00007f10725de928] main generic debug: using sout filter module "transcode"
[0000565456c7f540] main input debug: using timeshift granularity of 50 MiB
[0000565456c7f540] main input debug: using default timeshift path
[0000565456c7f540] main input debug: `file:///home/tmatth/Videos/akiyo_qcif.y4m' gives access `file' demux `any' path `/home/tmatth/Videos/akiyo_qcif.y4m'
[00007f105c077410] main access debug: creating access: file:///home/tmatth/Videos/akiyo_qcif.y4m
[00007f105c077410] main access debug:  (path: /home/tmatth/Videos/akiyo_qcif.y4m)
[00007f10725de888] main generic debug: looking for access module matching "file": 3 candidates
[00007f10725de888] main generic debug: using access module "filesystem"
[00007f10725de8c8] main generic debug: looking for stream_filter module matching "prefetch,cache": 3 candidates
[00007f105c077b00] cache_read stream filter debug: Using stream method for AStream*
[00007f105c077b00] cache_read stream filter debug: starting pre-buffering
[00007f105c077b00] cache_read stream filter debug: received first data after 0 ms
[00007f105c077b00] cache_read stream filter debug: pre-buffering done 1024 bytes in 0s - 30303 KiB/s
[00007f10725de8c8] main generic debug: using stream_filter module "cache_read"
[00007f10725de8d8] main generic debug: looking for stream_filter module matching "any": 7 candidates
[00007f10725de8d8] main generic debug: no stream_filter modules matched with name any
[00007f10725de918] main generic debug: looking for stream_directory module matching "any": 1 candidates
[00007f10725de918] main generic debug: no stream_directory modules matched with name any
[0000565456c7f540] main input debug: attachment of directory-extractor failed for file:///home/tmatth/Videos/akiyo_qcif.y4m
[00007f10725de8c8] main generic debug: looking for stream_filter module matching "record": 1 candidates
[00007f10725de8c8] main generic debug: using stream_filter module "record"
[0000565456c7f540] main input debug: creating demux "any", URL: file:///home/tmatth/Videos/akiyo_qcif.y4m, path: /home/tmatth/Videos/akiyo_qcif.y4m
[00007f10725de8e8] main generic debug: looking for demux module matching "ext-y4m": 64 candidates
[00007f10725de5f8] main generic debug: looking for xml reader module matching "any": 1 candidates
[00007f10725de5f8] main generic debug: using xml reader module "xml"
[00007f105c080bc0] main xml reader debug: removing "xml reader" module "xml"
[00007f105c0783f0] webvtt demux debug: subtitle demux discarded
[00007f105c0783f0] rawvid demux debug: Forcing chroma to 0x30323449 (I420)
[0000565456c7f540] main input debug: selecting program id=0
[0000565456c7f540] main input debug: ES track added: 'video/auto/0' (fourcc: 'I420')
[00007f10725de8e8] main generic debug: using demux module "rawvid"
[0000565456c7f540] main input debug: looking for a subtitle file in /home/tmatth/Videos/
[00007f10725de538] main generic debug: looking for packetizer module matching "any": 26 candidates
[00007f10725de538] main generic debug: using packetizer module "rawvideo"
[0000565456c7f540] main input debug: ES track selected: 'video/auto/0' (fourcc: 'I420')
[0000565456c7f540] main input debug: starting in sync mode
[00007f10725dea88] main generic debug: looking for meta reader module matching "any": 2 candidates
[00007f105c0837b0] main access debug: creating access: file:///home/tmatth/Videos/akiyo_qcif.y4m
[00007f105c0837b0] main access debug:  (path: /home/tmatth/Videos/akiyo_qcif.y4m)
[00007f10725de6d8] main generic debug: looking for access module matching "file": 3 candidates
[00007f10725de6d8] main generic debug: using access module "filesystem"
[00007f10725de738] main generic debug: looking for stream_filter module matching "prefetch,cache": 3 candidates
[00007f105c0839a0] cache_read stream filter debug: Using stream method for AStream*
[00007f105c0839a0] cache_read stream filter debug: starting pre-buffering
[00007f105c0839a0] cache_read stream filter debug: received first data after 0 ms
[00007f105c0839a0] cache_read stream filter debug: pre-buffering done 1024 bytes in 0s - 25000 KiB/s
[00007f10725de738] main generic debug: using stream_filter module "cache_read"
[00007f105c0839a0] main stream filter debug: removing "stream_filter" module "cache_read"
[00007f105c0837b0] main access debug: removing "access" module "filesystem"
[00007f105c0836f0] lua demux meta debug: Trying Lua scripts in /home/tmatth/.local/share/vlc/lua/meta/reader
[00007f105c0836f0] lua demux meta debug: Trying Lua scripts in /big-repos/vlc/modules/lua/meta/reader
[00007f105c0836f0] lua demux meta debug: Trying Lua scripts in /big-repos/vlc/share/lua/meta/reader
[00007f105c0836f0] lua demux meta debug: Trying Lua playlist script /big-repos/vlc/share/lua/meta/reader/filename.lua
[00007f105c0836f0] lua demux meta debug: Trying Lua playlist script /big-repos/vlc/share/lua/meta/reader/filename.luac
[00007f10725dea88] main generic debug: no meta reader modules matched with name any
[0000565456c7f540] main input debug: `file:///home/tmatth/Videos/akiyo_qcif.y4m' successfully opened
[0000565456c7f540] main input debug: program(0): using clock source: 'audio'
[0000565456c7f540] main input debug: Buffering 0%
[00007f10738fdbd8] main generic debug: looking for meta fetcher module matching "any": 1 candidates
[00007f1058025450] lua meta fetcher debug: Trying Lua scripts in /home/tmatth/.local/share/vlc/lua/meta/fetcher
[00007f1058025450] lua meta fetcher debug: Trying Lua scripts in /big-repos/vlc/modules/lua/meta/fetcher
[00007f1058025450] lua meta fetcher debug: Trying Lua scripts in /big-repos/vlc/share/lua/meta/fetcher
[0000565456c7f540] main input debug: switching to async mode
[00007f105c075ab0] main stream out debug: adding an output ES for `I420` (0x565456c8c600)
[00007f10738fdbd8] main generic debug: no meta fetcher modules matched with name any
[00007f105c075ab0] transcode stream out debug: creating video transcoding from fcc=`I420' to fcc=`av01'
[00007f10738fdbd8] main generic debug: looking for art finder module matching "any": 2 candidates
[00007f10725de5b8] main generic debug: looking for video decoder module matching "any": 18 candidates
[00007f1058025450] lua art finder debug: Trying Lua scripts in /home/tmatth/.local/share/vlc/lua/meta/art
[00007f1058025450] lua art finder debug: Trying Lua scripts in /big-repos/vlc/modules/lua/meta/art
[00007f1058025450] lua art finder debug: Trying Lua scripts in /big-repos/vlc/share/lua/meta/art
[00007f1058025450] lua art finder debug: Trying Lua playlist script /big-repos/vlc/share/lua/meta/art/00_musicbrainz.lua
[00007f1058025450] lua art finder debug: skipping script (unmatched scope) /big-repos/vlc/share/lua/meta/art/00_musicbrainz.lua
[00007f1058025450] lua art finder debug: Trying Lua playlist script /big-repos/vlc/share/lua/meta/art/00_musicbrainz.luac
[00007f1058025450] lua art finder debug: skipping script (unmatched scope) /big-repos/vlc/share/lua/meta/art/00_musicbrainz.luac
[00007f1058025450] lua art finder debug: Trying Lua playlist script /big-repos/vlc/share/lua/meta/art/02_frenchtv.lua
[00007f1058025450] lua art finder debug: skipping script (unmatched scope) /big-repos/vlc/share/lua/meta/art/02_frenchtv.lua
[00007f1058025450] lua art finder debug: Trying Lua playlist script /big-repos/vlc/share/lua/meta/art/03_lastfm.luac
[00007f1058025450] lua art finder debug: skipping script (unmatched scope) /big-repos/vlc/share/lua/meta/art/03_lastfm.luac
[00007f1058025450] lua art finder debug: Trying Lua playlist script /big-repos/vlc/share/lua/meta/art/02_frenchtv.luac
[00007f1058025450] lua art finder debug: skipping script (unmatched scope) /big-repos/vlc/share/lua/meta/art/02_frenchtv.luac
[00007f1058025450] lua art finder debug: Trying Lua playlist script /big-repos/vlc/share/lua/meta/art/01_googleimage.luac
[00007f1058025450] lua art finder debug: skipping script (unmatched scope) /big-repos/vlc/share/lua/meta/art/01_googleimage.luac
[00007f1058025450] lua art finder debug: Trying Lua playlist script /big-repos/vlc/share/lua/meta/art/03_lastfm.lua
[00007f1058025450] lua art finder debug: skipping script (unmatched scope) /big-repos/vlc/share/lua/meta/art/03_lastfm.lua
[00007f1058025450] lua art finder debug: Trying Lua playlist script /big-repos/vlc/share/lua/meta/art/01_googleimage.lua
[00007f1058025450] lua art finder debug: skipping script (unmatched scope) /big-repos/vlc/share/lua/meta/art/01_googleimage.lua
[00007f10738fdbd8] main generic debug: no art finder modules matched with name any
[00007f10725de5b8] main generic debug: using video decoder module "rawvideo"
[00007f105c075ab0] transcode stream out debug: source fps 30/1, destination 30/1
[00007f105c075ab0] transcode stream out debug: encoder aspect is 176:144
[00007f105c075ab0] transcode stream out debug: source chroma: I420, destination I420
[00007f10725de4e8] main generic debug: looking for video encoder module matching "rav1e": 1 candidates
[00007f10725de4e8] main generic debug: using video encoder module "rav1e"
[00007f105c002b60] main mux debug: adding a new input
[00007f105c002b60] avformat mux debug: adding input
[00007f105c002b60] avformat mux debug: Muxing framerate will be 30/1 = 30.00 fps
[00007f105c002b60] avformat mux debug: Muxing aspect ratio will be 1/1
[00007f105c002b60] avformat mux warning: Missing video bitrate, assuming 512k
[00007f105c08d500] transcode generic: video format update succeed
[0000565456c7f540] main input debug: Buffering 3%
[0000565456c7f540] main input debug: Buffering 6%
[0000565456c7f540] main input debug: Buffering 10%
[0000565456c7f540] main input debug: Buffering 13%
[0000565456c7f540] main input debug: Buffering 16%
[0000565456c7f540] main input debug: Buffering 20%
[0000565456c7f540] main input debug: Buffering 23%
[0000565456c7f540] main input debug: Buffering 26%
[0000565456c7f540] main input debug: Buffering 30%
[0000565456c7f540] main input debug: Buffering 33%
[0000565456c7f540] main input debug: Buffering 36%
[0000565456c7f540] main input debug: Buffering 40%
[0000565456c7f540] main input debug: Buffering 43%
[0000565456c7f540] main input debug: Buffering 46%
[0000565456c7f540] main input debug: Buffering 50%
[0000565456c7f540] main input debug: Buffering 53%
[0000565456c7f540] main input debug: Buffering 56%
[0000565456c7f540] main input debug: Buffering 60%
[0000565456c7f540] main input debug: Buffering 63%
[0000565456c7f540] main input debug: Buffering 66%
[0000565456c7f540] main input debug: Buffering 70%
[0000565456c7f540] main input debug: Buffering 73%
[0000565456c7f540] main input debug: Buffering 76%
[0000565456c7f540] main input debug: Buffering 80%
[0000565456c7f540] main input debug: Buffering 83%
[0000565456c7f540] main input debug: Buffering 86%
[0000565456c7f540] main input debug: Buffering 90%
[0000565456c7f540] main input debug: Buffering 93%
[0000565456c7f540] main input debug: Buffering 96%
[0000565456c7f540] main input debug: Buffering 100%
[0000565456c7f540] main input debug: Stream buffering done (1033 ms in 129 ms)
[0000565456c7f540] main input debug: Decoder wait done in 0 ms
vlc: stream_out/transcode/pcr_helper.c:161: transcode_track_pcr_helper_SignalLeavingFrame: Assertion `!vlc_list_is_empty(&pcr_helper->delayed_frames_data)' failed.
Aborted (core dumped)

This is true for rav1e 0.6.3 (contrib) and 0.5.1 (system)

Edited by Tristan Matthews
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information