transcode: make pcr forwarding optional

This patch make it possible to disable the PCR forwarding
synchronisation algorithm as it is still prone to bugs and will likely
fail on wrong encoder outputs.

The PCR forwarding is still enabled by default.

Refs #27730