modules/stream_out/transcode/transcode.h
@@ -65,6 +65,7 @@ typedef struct
     /* Spu's video */
     sout_stream_id_sys_t *id_video;
 
+    bool pcr_forwarding_enabled;
     vlc_pcr_sync_t *pcr_sync;
     bool first_pcr_sent;
     bool pcr_sync_has_input;
